--- a/index.html
+++ b/index.html
@@ -3,118 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alfon Apps - Mobile App Agency</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>Alfonapps</title>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Space Grotesk', sans-serif;
+            height: 100vh;
+            overflow: hidden;
+            background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), #667eea 0%, #764ba2 50%, #1e3c72 100%);
+            transition: background 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: white;
+        }
+
+        .logo {
+            font-size: 4rem;
+            font-weight: 300;
+            letter-spacing: -0.1em;
+            margin-bottom: 1rem;
+            text-align: center;
+        }
+
+        .contact {
+            font-size: 1.2rem;
+            font-weight: 400;
+            opacity: 0.8;
+        }
+
+        @media (max-width: 768px) {
+            .logo {
+                font-size: 3rem;
+            }
+            
+            .contact {
+                font-size: 1rem;
+            }
+        }
+    </style>
 </head>
 <body>
-    <header class="header">
-        <nav class="nav">
-            <div class="nav-brand">
-                <h1>Alfon Apps</h1>
-            </div>
-            <div class="nav-links">
-                <a href="#services">Services</a>
-                <a href="#portfolio">Portfolio</a>
-                <a href="#contact" class="cta-button">Get Started</a>
-            </div>
-        </nav>
-    </header>
+    <h1 class="logo">Alfonapps.</h1>
+    <div class="contact">hello@alfon.net</div>
 
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2 class="hero-title">Beautiful Apps That Drive Results</h2>
-                <p class="hero-description">
-                    We craft exceptional mobile experiences that connect your brand with users. 
-                    From concept to launch, we turn your ideas into powerful apps.
-                </p>
-                <div class="hero-buttons">
-                    <a href="#contact" class="btn-primary">Start Your Project</a>
-                    <a href="#portfolio" class="btn-secondary">View Our Work</a>
-                </div>
-            </div>
-            <div class="hero-visual">
-                <div class="phone-mockup">
-                    <div class="phone-screen"></div>
-                </div>
-            </div>
-        </section>
-
-        <section id="services" class="services">
-            <div class="container">
-                <h3 class="section-title">Our Services</h3>
-                <div class="services-grid">
-                    <div class="service-card">
-                        <div class="service-icon">📱</div>
-                        <h4>iOS Development</h4>
-                        <p>Native iOS apps built with Swift, optimized for performance and user experience.</p>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">🤖</div>
-                        <h4>Android Development</h4>
-                        <p>Beautiful Android apps using modern development practices and Material Design.</p>
-                    </div>
-                    <div class="service-card">
-                        <div class="service-icon">⚡</div>
-                        <h4>Cross-Platform</h4>
-                        <p>Efficient development with React Native and Flutter for multiple platforms.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="portfolio" class="portfolio">
-            <div class="container">
-                <h3 class="section-title">Featured Projects</h3>
-                <div class="portfolio-grid">
-                    <div class="portfolio-item">
-                        <div class="portfolio-image"></div>
-                        <div class="portfolio-content">
-                            <h4>FinanceFlow</h4>
-                            <p>Personal finance management app with AI-powered insights</p>
-                        </div>
-                    </div>
-                    <div class="portfolio-item">
-                        <div class="portfolio-image"></div>
-                        <div class="portfolio-content">
-                            <h4>FitTracker Pro</h4>
-                            <p>Comprehensive fitness tracking with social features</p>
-                        </div>
-                    </div>
-                    <div class="portfolio-item">
-                        <div class="portfolio-image"></div>
-                        <div class="portfolio-content">
-                            <h4>ShopLocal</h4>
-                            <p>Location-based marketplace connecting local businesses</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="contact" class="contact">
-            <div class="container">
-                <div class="contact-content">
-                    <h3 class="section-title">Ready to Build Something Amazing?</h3>
-                    <p class="contact-description">
-                        Let's discuss your project and bring your app idea to life. 
-                        We're here to help you succeed.
-                    </p>
-                    <div class="contact-info">
-                        <a href="mailto:hello@alfonapps.com" class="contact-link">hello@alfonapps.com</a>
-                        <a href="tel:+1234567890" class="contact-link">+1 (234) 567-8900</a>
-                    </div>
-                    <a href="mailto:hello@alfonapps.com" class="btn-primary">Get In Touch</a>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2024 Alfon Apps. All rights reserved.</p>
-        </div>
-    </footer>
+    <script>
+        document.addEventListener('mousemove', (e) => {
+            const x = (e.clientX / window.innerWidth) * 100;
+            const y = (e.clientY / window.innerHeight) * 100;
+            document.body.style.setProperty('--x', x + '%');
+            document.body.style.setProperty('--y', y + '%');
+        });
+    </script>
 </body>
 </html>
