--- a/index.html
+++ b/index.html
@@ -18,40 +18,62 @@
             overflow: hidden;
             background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), #667eea 0%, #764ba2 50%, #1e3c72 100%);
             transition: background 0.3s ease;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
             color: white;
         }
 
         .logo {
-            font-size: 4rem;
+            font-size: 2rem;
             font-weight: 300;
             letter-spacing: -0.1em;
-            margin-bottom: 1rem;
-            text-align: center;
+            margin-bottom: 0.5rem;
+            text-align: left;
+            position: fixed;
+            bottom: 3.5rem;
+            left: 2rem;
+        }
+
+        .subtext {
+            font-size: 0.9rem;
+            font-weight: 400;
+            opacity: 0.7;
+            position: fixed;
+            bottom: 2.8rem;
+            left: 2rem;
         }
 
         .contact {
             font-size: 1.2rem;
             font-weight: 400;
             opacity: 0.8;
+            position: fixed;
+            bottom: 2rem;
+            left: 2rem;
         }
 
         @media (max-width: 768px) {
             .logo {
-                font-size: 3rem;
+                font-size: 1.5rem;
+                bottom: 2.5rem;
+                left: 1rem;
+            }
+            
+            .subtext {
+                font-size: 0.8rem;
+                bottom: 2rem;
+                left: 1rem;
             }
             
             .contact {
                 font-size: 1rem;
+                bottom: 1.5rem;
+                left: 1rem;
             }
         }
     </style>
 </head>
 <body>
     <h1 class="logo">Alfonapps.</h1>
+    <div class="subtext">Building the future of apps</div>
     <div class="contact">hello@alfon.net</div>
 
     <script>
