--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alfonapps</title>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -22,9 +22,10 @@
         }
 
         .logo {
+            font-family: 'Orbitron', monospace;
             font-size: 2.5rem;
-            font-weight: 300;
-            letter-spacing: -0.1em;
+            font-weight: 700;
+            letter-spacing: 0.1em;
             margin-bottom: 0.5rem;
             text-align: left;
             position: fixed;
@@ -73,7 +74,7 @@
 </head>
 <body>
     <h1 class="logo">Alfonapps.</h1>
-    <div class="subtext">Building the future of apps</div>
+    <div class="subtext">Building apps you love</div>
     <div class="contact">hello@alfon.net</div>
 
     <script>
