--- a/readvortex.html
+++ b/readvortex.html
@@ -192,8 +192,8 @@
         </div>
 
         <div class="footer">
-            <a href="/">← Back to Alfonapps</a>
-            <a href="/privacy.html">Privacy Policy</a>
+            <a href="index.html">← Back to Alfonapps</a>
+            <a href="privacy.html">Privacy Policy</a>
         </div>
     </div>
 </body>
