--- a/privacy.html
+++ b/privacy.html
@@ -15,18 +15,23 @@
         body {
             font-family: 'Space Grotesk', sans-serif;
             line-height: 1.6;
-            color: #333;
-            background: #f8f9fa;
+            color: white;
+            background: radial-gradient(circle at var(--x, 50%) var(--y, 50%), #667eea 0%, #764ba2 50%, #1e3c72 100%);
+            transition: background 0.3s ease;
             padding: 2rem;
+            overflow-x: hidden;
+            min-height: 100vh;
         }
 
         .container {
             max-width: 800px;
             margin: 0 auto;
-            background: white;
+            background: rgba(255, 255, 255, 0.1);
             padding: 3rem;
             border-radius: 12px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
         .header {
@@ -39,28 +44,28 @@
         h1 {
             font-size: 2.5rem;
             font-weight: 300;
-            color: #667eea;
+            color: white;
             margin-bottom: 1rem;
         }
 
         .effective-date {
             font-size: 1rem;
-            color: #666;
+            color: rgba(255, 255, 255, 0.8);
             font-weight: 400;
         }
 
         h2 {
             font-size: 1.4rem;
             font-weight: 500;
-            color: #444;
+            color: white;
             margin: 2rem 0 1rem 0;
             padding-bottom: 0.5rem;
-            border-bottom: 1px solid #eee;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.3);
         }
 
         p {
             margin-bottom: 1rem;
-            color: #555;
+            color: rgba(255, 255, 255, 0.9);
         }
 
         ul {
@@ -69,42 +74,44 @@
 
         li {
             margin-bottom: 0.5rem;
-            color: #555;
+            color: rgba(255, 255, 255, 0.9);
         }
 
         .divider {
             text-align: center;
             margin: 2rem 0;
-            color: #ccc;
+            color: rgba(255, 255, 255, 0.5);
             font-weight: 300;
         }
 
         .contact-info {
-            background: #f8f9fa;
+            background: rgba(255, 255, 255, 0.1);
             padding: 1.5rem;
             border-radius: 8px;
             margin-top: 2rem;
+            border: 1px solid rgba(255, 255, 255, 0.2);
         }
 
         .contact-info h3 {
             margin-bottom: 1rem;
-            color: #444;
+            color: white;
         }
 
         .footer {
             text-align: center;
             margin-top: 3rem;
             padding-top: 2rem;
-            border-top: 1px solid #eee;
+            border-top: 1px solid rgba(255, 255, 255, 0.3);
         }
 
         .footer a {
-            color: #667eea;
+            color: rgba(255, 255, 255, 0.9);
             text-decoration: none;
             margin: 0 1rem;
         }
 
         .footer a:hover {
+            color: white;
             text-decoration: underline;
         }
 
@@ -212,9 +219,18 @@
         </div>
 
         <div class="footer">
-            <a href="/">← Back to Alfonapps</a>
-            <a href="/readvortex.html">ReadVortex</a>
+            <a href="index.html">← Back to Alfonapps</a>
+            <a href="readvortex.html">ReadVortex</a>
         </div>
     </div>
+
+    <script>
+        document.addEventListener('mousemove', (e) => {
+            const x = (e.clientX / window.innerWidth) * 100;
+            const y = (e.clientY / window.innerHeight) * 100;
+            document.body.style.setProperty('--x', x + '%');
+            document.body.style.setProperty('--y', y + '%');
+        });
+    </script>
 </body>
 </html>
