--- a/privacy.html
+++ b/privacy.html
@@ -150,8 +150,10 @@
             <li><strong>Saved Content:</strong> Links, articles, or text you choose to save for later reading.</li>
             <li><strong>Usage Data:</strong> Information on how you interact with the app (e.g., features used, time spent).</li>
             <li><strong>Device Information:</strong> Browser type, operating system, IP address, and general location (non-identifiable).</li>
+            <li><strong>Purchases:</strong> Subscription and purchase history (via our partner RevenueCat) to enable premium features.</li>
+            <li><strong>Diagnostics:</strong> Crash logs, error reports, and performance data (via our partner Sentry) to improve app stability and performance.</li>
         </ul>
-        <p>We do not collect sensitive personal data such as financial, health, or government ID information.</p>
+        <p>We do not collect sensitive personal data such as financial, health, or government ID information. Payment details (e.g., credit card numbers) are processed directly by Apple through the App Store and are never accessible to us.</p>
 
         <div class="divider">⸻</div>
 
@@ -160,6 +162,8 @@
         <ul>
             <li>Provide and improve our services.</li>
             <li>Sync your saved items across devices.</li>
+            <li>Manage subscriptions and purchases (via RevenueCat).</li>
+            <li>Monitor crashes and app performance (via Sentry).</li>
             <li>Communicate important updates or support messages.</li>
             <li>Analyze trends and usage to improve functionality.</li>
             <li>Ensure security and prevent abuse.</li>
@@ -171,7 +175,12 @@
         <h2>4. Sharing Your Information</h2>
         <p>We may share your information with:</p>
         <ul>
-            <li><strong>Service Providers:</strong> (e.g., hosting providers, analytics services, cloud storage) to help us operate the app.</li>
+            <li><strong>Service Providers:</strong></li>
+            <ul>
+                <li>RevenueCat (to process subscriptions and purchases).</li>
+                <li>Sentry (to collect crash and performance diagnostics).</li>
+                <li>Other infrastructure providers (e.g., hosting, storage, analytics) to operate our services.</li>
+            </ul>
             <li><strong>Legal Requirements:</strong> If required by law, regulation, or valid legal process.</li>
         </ul>
         <p>We never sell or rent your data to advertisers.</p>
